@@ -22,11 +22,14 @@ check_match = function ( f )
 <div class="box">
 <br><form name="edit_pref_form" method="post" onsubmit="return check_match(this)" action="my_pref.pl">
 <input type="hidden" name="rm" value="update_prefs">
+<tmpl_if password_only><input name="password_only" value="1" type="hidden" /></tmpl_if>
 <table cellpadding="4" cellspacing="0" class="form-head">
 	<tr class="form-head"><td>Preferences</td></tr></table>
 	<table width="571" cellpadding="2" cellspacing="0" class="form-cell">
+    <tmpl_unless password_only>
 	<tr><td class="form-cell" width="160">Search Results/Page</td>
             <td class="form-cell"><tmpl_var search_results_selector></td></tr>
+    </tmpl_unless>
         <tr><td class="form-cell" width="160">Change Password:</td>
         		<td class="form-cell"><input type="password" name="new_password"> (new password)<br><input type="password" name="new_password_repeat"> (repeat)</td></tr></table><br></div>
 
